# penguinboost

./: LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: build_publish.yml  test.yml
docs/: USAGE.md  finance_regression.md
penguinboost/: __init__.py  sklearn_api.py  utils.py
penguinboost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
penguinboost/core/: binning.py  boosting.py  categorical.py  conformal.py  dart.py  era_boost.py  financial.py  histogram.py  monotone.py  neutralization.py  regularization.py  sampling.py  tree.py
penguinboost/cpp/: _core.cpp
penguinboost/metrics/: metrics.py
penguinboost/objectives/: __init__.py  classification.py  corr.py  multi_target.py  quantile.py  ranking.py  regression.py  survival.py
tests/: bench_loss_objectives.py  bench_vs_lightgbm.py  test_penguinboost.py
