[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "penguinboost"
version = "0.3.6"
description = "Hybrid gradient boosting with built-in resistance to financial overfitting."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "S.I", email = "test_api_ai@proton.me"},
]
keywords = [
    "gradient boosting", "gbdt", "machine learning", "finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/test-api-ai/penguinboost"
Repository = "https://github.com/test-api-ai/penguinboost.git"
"Bug Tracker" = "https://github.com/test-api-ai/penguinboost/issues"

[tool.setuptools.packages.find]
where = ["."]

# ── cibuildwheel 設定 ─────────────────────────────────────────────────────────

[tool.cibuildwheel]
# CPython 3.9–3.12 のみビルド（PyPy・32bit は除外）
build = "cp39-* cp310-* cp311-* cp312-*"
skip  = ["pp*", "*-win32", "*-manylinux_i686"]

# cibuildwheel 内テストは sys.path 衝突のため test.yml に委譲
# （cibuildwheel は wheel をインストールした venv でテストを実行するが、
#   CWD がプロジェクトルートのため '' が sys.path に残りソースを優先 import してしまう）

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
# ネイティブ arch のみ（macos-14 = arm64）
archs = ["native"]
# macOS CI では delocate の fat binary 問題を回避するため OpenMP を無効化
# ソース（sdist）からビルドする場合は libomp があれば自動で有効になる
environment = {DISABLE_OPENMP = "1"}

[tool.cibuildwheel.windows]
archs = ["AMD64"]
